force-app/main/default/objects/SS_Question__c/fields/SS_Available_Answers__c.field-meta.xml
<CustomField>
    <fullName>SS_Available_Answers__c</fullName>
    <label>Available Answers</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>