force-app/main/default/objects/SS_Question__c/fields/SS_Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>SS_Composite_Key__c</fullName>
    <label>Composite Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>