force-app/main/default/objects/SS_Question__c/fields/SS_is_Selected_Question__c.field-meta.xml
<CustomField>
    <fullName>SS_is_Selected_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Selected Question</label>
    <type>Checkbox</type>
</CustomField>