force-app/main/default/objects/SS_Question__c/fields/SS_Question__c.field-meta.xml
<CustomField>
    <fullName>SS_Question__c</fullName>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>