force-app/main/default/objects/SS_Question__c/fields/SS_Type__c.field-meta.xml
<CustomField>
    <fullName>SS_Type__c</fullName>
    <label>Type</label>
    <length>221</length>
    <type>Text</type>
</CustomField>